--- a/classes/barbarian/index.html
+++ b/classes/barbarian/index.html
@@ -209,89 +209,95 @@
 <div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
 <div class="Move"><h3 class="MoveName">如饑似渴 (Still Hungry)</h3>
 <p class="NoIndent">
-	Choose an additional appetite.</p></div>
+	選擇並獲得一個額外的欲望。</p></div>
 
 <div class="Move"><h3 class="MoveName">毀滅慾望 (Appetite for Destruction)</h3>
 <p class="NoIndent">
-	Take a move from the fighter, bard or thief class list. You may not take multiclass moves from those classes.</p></div>
+	從戰士、吟遊詩人、或盜賊職業列表中選擇並獲得一個動作。你不能選擇這些職業中的兼職動作。</p></div>
 
 <div class="Move"><h3 class="MoveName">致汝吾愛狂猛如車 (My Love For You Is Like a Truck)</h3>
 <p class="NoIndent">
-	When you perform a feat of strength, name someone present whom you have impressed and take +1 forward to parley with them.</p></div>
+	當你<strong>做出一個能展現力量的壯舉</strong>時，指定一個在場的對象，他將對你留下深刻的印象，且你在與他談判時獲得下次+1。</p></div>
 
 <div class="Move"><h3 class="MoveName">生命中最棒的事 (What Is Best In Life)</h3>
 <p class="NoIndent">
-	At the end of a session, if during this session you have crushed your enemies, seen them driven before you, or have heard the lamentations of their kinfolk mark XP.</p></div>
+	在聚會結束時，若你在該聚會期間曾經擊潰你的敵人、讓他們在你面前被逼迫驅趕、或聽見他們親屬的慟哭，你標記經驗值。</p></div>
 
 <div class="Move"><h3 class="MoveName">荒野遊蕩者 (Wide Wanderer)</h3>
 <p class="NoIndent">
-	You’ve traveled the wide world over. When you arrive someplace ask the GM about any important traditions, rituals, and so on, they’ll tell you what you need to know.</p></div>
+	你曾旅行遍歷過這寬廣無垠的世界。當你來到某處時，詢問GM關於當地的任何重要習俗、儀式等等，GM將告訴你任何你需要知道的情報。</p></div>
 
 <div class="Move"><h3 class="MoveName">僭取者 (Usurper)</h3>
 <p class="NoIndent">
-	When you prove yourself superior to a person in power, take +1 forward with their followers, underlings, and hangers on.</p></div>
+	當<strong>你證明自己比某個權力者更加優越</strong>時，你獲得對他們的追隨者、部屬、和隨從的下次+1。</p></div>
 
 <div class="Move"><h3 class="MoveName">蠻族可汗 (Khan of Khans)</h3>
 <p class="NoIndent">
-	Your hirelings always accept the gratuitous fulfillment of one of your appetites as payment.</p></div>
+	你的僱工永遠會接受你其中一個慾望所帶來的無端滿足感做為報酬。</p></div>
 
 <div class="Move"><h3 class="MoveName">參孫 (Samson)</h3>
 <p class="NoIndent">
-	You may take a debility to immediately break free of any physical or mental restraint.</p></div>
+	你可以承受一個異常狀態，以立即從任何物理性或心理性的束縛中掙脫開來。</p></div>
 
 <div class="Move"><h3 class="MoveName">粉碎！ (Smash!)</h3>
 <p class="NoIndent">
-	When you hack and slash, on a 12+ deal your damage and choose something physical your target has (a weapon, their position, a limb): they lose it.</p></div>
+	當你在砍劈動作中擲出12+的結果時，你對敵人造成傷害，並選擇目標身上擁有的某個事物（一把武器、站位架式、肢體）：目標將會失去它。</p></div>
 
 <div class="Move"><h3 class="MoveName">不滅飢渴 (Indestructible Hunger)</h3>
 <p class="NoIndent">
-	When you take damage you can choose to take 1 ongoing until you sate one of your appetites instead of taking the damage. If you already have this penalty you cannot choose this option.</p></div>
+	當你要受到傷害時，你可以選擇不承受傷害，而改為獲得 持續-1 直到你充分滿足你的其中一個慾望為止。若你已經承受這個減值的影響，則你不能再選擇這個選項。</p></div>
 
 <div class="Move"><h3 class="MoveName">看穿弱點 (Eye For Weakness)</h3>
 <p class="NoIndent">
-	When you discern realities add “What here is weak or vulnerable?” to the list of questions you can ask.</p></div>
+	當你進行審視現狀動作時，將「這裡有什麼是脆弱或易受攻擊的？」這個問題添加到你可以詢問的問題清單中。</p></div>
 
 <div class="Move"><h3 class="MoveName">勢不可當 (On The Move)</h3>
 <p class="NoIndent">
-	When you defy a danger caused by movement (maybe falling off a narrow bridge or rushing past an armed guard) take +1.</p></div>
+	當你在面對因移動而導致的危險（也許從窄橋上墜落、或是衝刺闖過一名武裝守衛身邊）時，你獲得 +1 加值。</p></div>
 
 
 <p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
 
 <div class="Move"><h3 class="MoveName">吉日赴死 (A Good Day to Die)</h3>
 <p class="NoIndent">
-	As long as you have less than your Con in current HP (or 1, whichever is higher) take +1 ongoing.</p></div>
+	只要你的當前生命值低於你的體質調整值（或 1，看何者較高），你獲得持續 +1。</p></div>
 
 <div class="Move"><h3 class="MoveName">殺光他們 (Kill ‘em All)</h3>
-<p class="Requirement">Requires: Appetite for Destruction</p>
+<p class="Requirement">需求: 毀滅慾望</p>
 <p class="NoIndent">
-	Take another move from the fighter, bard or thief class list. You may not take multiclass moves from those classes.</p></div>
+	再從戰士、吟遊詩人、或盜賊職業列表中選擇並獲得另一個動作。你不能選擇這些職業中的兼職動作。</p></div>
 
 <div class="Move"><h3 class="MoveName">戰吼 (War Cry)</h3>
 <p class="NoIndent">
-	When you enter battle with a show of force (a shout, a rallying cry, a battle dance) roll+Cha. On a 10+ both, On a 7–9 one or the other.</p>
-	<ul><li>Your allies are rallied and take +1 forward</li>
-	<li>Your enemies feel fear and act accordingly (avoiding you, hiding, attacking with fear driven abandon)</li></ul></p></div>
+	當你<strong>在進入戰鬥的同時展現力量（吶喊、激勵怒號、戰舞）</strong>，擲+魅力：<br/>
+	✴擲出10+時，你獲得兩項。<br/>
+	✴擲出7-9時，你選擇並獲得其中一項。</p>
+<ul>
+	<li>你的同伴們被鼓舞，並獲得下次 +1</li>
+	<li>你的敵人們感到恐懼，並因此採取相應的行動（避開你、躲藏起來、或在恐懼的驅使下發動攻擊）</li></ul></p></div>
 
 <div class="Move"><h3 class="MoveName">力量印記 (Mark of Might)</h3>
 <p class="NoIndent">
-	When you take this move and spend some uninterrupted time reflecting on your past glories you may mark yourself with a symbol of your power (a long braid tied with bells, ritual scars or tattoos, etc.) Any intelligent mortal creature who sees this symbol knows instinctively that you are a force to be reckoned with and treats you appropriately.</p></div>
+	當你獲得這個動作，並花費了一段時間不被打擾地回顧深思你過往的榮耀之後，你可以在自己身上標記一個彰顯你力量的象徵（繫著鈴鐺的長辮、儀式性傷疤、或紋身刺青等等）。任何看見這個象徵，且具有智能的凡俗生物都將本能地理解到你是一股不可被忽視的強大力量，並會因此適當地對待你。</p></div>
 
 <div class="Move"><h3 class="MoveName">更多！還要更多！ (More! Always More!)</h3>
 <p class="NoIndent">
-	When you satisfy an appetite to the extreme (destroying something unique and significant, gaining enormous fame, riches, power, etc.) you may choose to resolve it. Cross it off the list and mark XP. While you may pursue that appetite again, you no longer feel the burning desire you once did. In its place, choose a new appetite from the list or write your own.</p></div>
+	當你把一個慾望滿足到極致（摧毀某個獨特且重要的東西、贏得盛大的名聲、財富、權力等等），你可以選擇把它就此解決掉。將它從列表中劃掉並標記經驗值。儘管你仍然可以嘗試追尋滿足該慾望，但你再也無法感受那股你曾經懷有的熾熱渴望。取而代之，從列表中選擇一個新的、或寫下你自己的慾望。</p></div>
 
 <div class="Move"><h3 class="MoveName">危險份子 (The One Who Knocks)</h3>
 <p class="NoIndent">
-	When you defy danger, on a 12+ you turn the danger back on itself, the GM will describe how.</p></div>
+	當你在面對危險動作中擲出12+的結果時，你把危險倒轉回它自己身上，GM將會描述這如何發生。</p></div>
 
-<div class="Move"><h3 class="MoveName">合理懷疑 (Healthy Distrust)</h3>
+<div class="Move"><h3 class="MoveName">健康懷疑論 (Healthy Distrust)</h3>
 <p class="NoIndent">
-	Whenever the unclean magic wielded by mortal men causes you to defy danger, treat any result of 6 as a 7–9.</p></div>
+	每當<strong>凡人所施展的不潔魔法導致你必須面對危險</strong>時，將6-的結果視作7-9的結果。</p></div>
 
 <div class="Move"><h3 class="MoveName">為鮮血之神 (For the Blood God)</h3>
 <p class="NoIndent">
-	You are initiated in the old ways, the ways of sacrifice. Choose something your gods (or the ancestor spirits, or your totem, etc) value—gold, blood, bones or the like. When you sacrifice those things as per your rites and rituals, roll+Wis. On a 10+ the GM will grant you insight into your current trouble or a boon to help you. On a 7–9 the sacrifice is not enough and your gods take of your flesh as well, but still grant you some insight or boon. On a miss, you earn the ire of the fickle spirits.</p></div>
+	你遵循著犧牲獻祭的古老傳統。選擇某項你的神明（或先祖精魂、或你的部落圖騰等等）所重視的事物──黃金、鮮血、骸骨或之類的。當你<strong>獻上這些東西作為你的祭禮和儀式</strong>時，擲+睿知：<br/>
+	✴擲出10+時，GM會讓你洞察理解你目前身處的困境、或賜與你一個恩賜以協助你。<br/>
+	✴擲出7-9時，你獻上的祭品不夠，因此你的神明也將取走你的血肉，但仍然會賜與你見解或恩賜。<br/>
+	✴擲出失敗時，你將承受那無常精魂所降下的忿怒。</p></div>
 </div>
 
           </div>
