--- a/classes/immolator/index.html
+++ b/classes/immolator/index.html
@@ -205,66 +205,90 @@
 <h2>進階動作</h2>
 <div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
 
-<div class="Move"><h3 class="MoveName">Lore of Flame</h3>
+<div class="Move"><h3 class="MoveName">烈焰傳說 (Lore of Flame)</h3>
 <p class="NoIndent">
-	When you stare into a source of fire, looking for answers, roll+WIS On a hit, the GM will tell you something new and interesting about the current situation. On a 10+, the GM will give you good detail. On a 7–9, the GM will give you an impression. If you already know all there is to know, the GM will tell you that.</p></div>
+	當你<strong>凝視著火源追尋解答</strong>時，擲+睿知：<br/>
+	✴擲出成功時，GM將會告訴你某個與當下情境有關的有趣新情報。<br/>
+	✴擲出10+時，GM會詳細地告訴你其中的細節。<br/>
+	✴擲出7-9時，GM只會告訴你大致的印象。</p>
+<p class="NoIndent">如果你已經知道了所有該知道的情報，GM也會把這件事告訴你。</p></div>
 
-<div class="Move"><h3 class="MoveName">Burns Twice as Bright</h3>
+<div class="Move"><h3 class="MoveName">熾焰加倍燦爛 (Burns Twice as Bright)</h3>
 <p class="NoIndent">
-	When you channel the flames of fate, you may treat a missed roll as a 7-9 or a 7-9 result as a 10+. This may be a roll you or another character has made. Tell the GM something you’ve lost; an emotion, a memory or some innate piece of your being. You may not use this move again until you’ve used Burns Half As Long.</p></div>
+	當你引導命運之火時，你可以將一次失敗的擲骰結果視作7-9的結果、或將一次7-9的擲骰結果視作10+。這個效果可以用在你或其他角色進行的擲骰上。告訴GM你將因此失去什麼：一種情感、一段記憶、或某個你天生就永遠的事物。直到你進行 灼燃半減長息 動作之前，你都不能再次使用這個動作。</p></div>
 
-<div class="Move"><h3 class="MoveName">Burns Half as Long</h3>
+<div class="Move"><h3 class="MoveName">灼燃半減長息 (Burns Half as Long)</h3>
 <p>
-	You gain this move when you gain Burns Twice as Bright.</p>
+	你在獲得 熾焰加倍燦爛 動作的同時也一併獲得這個動作。</p>
 <p class="NoIndent">
-	When you sacrifice a victory to the flames of fate, treat any roll of 10+ as a miss.</p></div>
+	當你將勝利奉獻給命運之炎時，將任何10+的擲骰結果視作失敗。</p></div>
 
-<div class="Move"><h3 class="MoveName">This Killing Fire</h3>
+<div class="Move"><h3 class="MoveName">殺戮之火 (This Killing Fire)</h3>
 <p class="NoIndent">
-	Add the following tags to your options for Burning Brand: messy, forceful, reach, near, far</p></div>
+	將下列標籤添加到你 燃燒之劍 動作的選項中：<tag>毀亂</tag>、<tag>強力</tag>、<tag class="red">及遠</tag>、<tag class="red">短程</tag>、<tag class="red">遠程</tag>。</p></div>
 
-<div class="Move"><h3 class="MoveName">Firebrand</h3>
+<div class="Move"><h3 class="MoveName">煽動者 (Firebrand)</h3>
 <p class="NoIndent">
-	When you introduce a new idea to an NPC, roll+CHA. On a 10+ They believe the idea to be their own and take to it with fervor On a 7-9, Their passion fades after a day or two. On a miss, they respond negatively, speaking out against the idea.</p></div>
+	當你<strong>對一個NPC說明一個嶄新的想法</strong>時，擲+魅力：<br/>
+	✴擲出10+時，他將相信這是他自己的想法，並對它充滿熱情。<br/>
+	✴擲出7-9時，他的激情只會持續一到二天。<br/>
+	✴擲出失敗時，他將表現出消極的反應，並公然反對這個想法。</p></div>
 
-<div class="Move"><h3 class="MoveName">Ogdru Jahad</h3>
+<div class="Move"><h3 class="MoveName">奥古·桀哈 (Ogdru Jahad)</h3>
 <p class="NoIndent">
-	Gain the Wizard move Ritual. The GM will always tell you what you have to sacrifice to gain the effect you desire.</p></div>
+	獲得法師職業動作中的儀式動作。GM永遠會告知你需要犧牲什麼東西才能獲得你想要的效果。</p></div>
 
-<div class="Move"><h3 class="MoveName">Moth to the Flame</h3>
+<div class="Move"><h3 class="MoveName">飛蛾撲火 (Moth to the Flame)</h3>
 <p class="NoIndent">
-	When you tempt a weak mind with your inner fire, roll+WIS. On a 10+ their will is suppressed, they’ll follow you and do as you desire, so long as nothing startles or surprises them. On a 7-9, the effect is only strong enough to distract or confuse them. On a miss, they become agitated and upset, your fire having sparked their hidden desires.</p></div>
+	當你<strong>利用你心中的火焰誘惑軟弱的心靈</strong>時，擲+睿知：<br/>
+	✴擲出10+時，他們的自我意志將被抑制。只要他們沒有受到驚嚇或吃驚，他們就會持續跟隨你，並按照你所希望的去做。<br/>
+	✴擲出7-9時，這個效果的強度只剛好足夠讓他們分神或被迷惑。<br/>
+	✴擲出失敗時，他們將變得焦躁心煩。你的火焰點燃了他們內心隱藏的渴望。</p></div>
 
-<div class="Move"><h3 class="MoveName">Burning Bridges</h3>
+<div class="Move"><h3 class="MoveName">自斷後路 (Burning Bridges)</h3>
 <p class="NoIndent">
-	When you would take your last breath, don’t. Instead, you may erase one of your Bonds. This is permanent and lowers your total available Bonds forever. You are alive and have 1d6 hp. If you have no more Bonds, take your last breath as normal.</p></div>
+	當你將要進行臨死一息時，你可以改為消除你的其中一個羈絆。這將使其被永遠消除，並永久減少你總共所能擁有的羈絆數量。你將活過來並恢復 1d6 生命值。若你沒有任何的羈絆，則你如常進行臨死一息的擲骰。</p></div>
 
-<div class="Move"><h3 class="MoveName">The Enkindler</h3>
+<div class="Move"><h3 class="MoveName">啟燃者 (The Enkindler)</h3>
 <p class="NoIndent">
-	When you bolster the courage of others roll+CHA. On a 10+ they shake off all fear and doubt, becoming brave in an instant. On a 7-9, this effect is fleeting, they realize its superficiality and resort to cowardice after a moment or two. On a miss, they’re cowed or terrified by your presence.</p></div>
+	當你<strong>鼓舞激起他人心中的勇氣</strong>時，擲+魅力：<br/>
+	✴擲出10+時，他們擺脫了心中所有的恐懼和疑慮，瞬間變得英勇無比。<br/>
+	✴擲出7-9時，這個效果轉瞬即逝，他們將意識到它的膚淺，並在一兩分鐘後退縮。<br/>
+	✴擲出失敗時，他們將因你的存在而感到威脅或懼怕。</p></div>
 
-<div class="Move"><h3 class="MoveName">Sick Burn</h3>
+<div class="Move"><h3 class="MoveName">炎上嘲弄 (Sick Burn)</h3>
 <p class="NoIndent">
-	When you insult an NPC, roll + CHA. On a 10+ you leave them no room to react, they bear your insult and the scorn of all who hear it. On a 7-9 you cross a line, they will have their revenge, someday. On a miss you’ve gone too far, they blow up here and now.</p></div>
+	當你<strong>侮辱一名NPC</strong>時，擲+魅力：<br/>
+	✴擲出10+時，你完全沒給他們任何反應的空間，他們將承受你的侮辱和所有聽眾的輕蔑嘲笑。<br/>
+	✴擲出7-9時，你越過了界限。他們總有一天會展開報復。<br/>
+	✴擲出失敗時，你太超過了，且他們將當場發飆。</p></div>
 
 <p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
 
-<div class="Move"><h3 class="MoveName">From Hell’s Heart</h3>
+<div class="Move"><h3 class="MoveName">源自地獄之心 (From Hell’s Heart)</h3>
 <p class="NoIndent">
-	Whenever you summon fire with any of your moves, you can replace it with the black fires of hell itself. This fire does not burn with heat and ignores armor, scorching the soul itself. Those creatures without souls cannot be harmed by this type of flame.</p></div>
+	每當你使用你的任何一個動作召喚出火焰時，你可以用來自地獄本身的黑色火焰來代替它。這種火焰並不會釋放出熱量，它<tag>無視護甲</tag>，且會灼燒靈魂本身。那些沒有靈魂的生物並不會受到這種火焰的傷害。</p></div>
 
-<div class="Move"><h3 class="MoveName">Burning Ring of Fire</h3>
+<div class="Move"><h3 class="MoveName">燃焰之環 (Burning Ring of Fire)</h3>
 <p class="NoIndent">
-	When you fuse a willing person’s soul to yours, roll+CHA. On a hit you are bound together, able to sense each other at any distance, as well as sharing your emotional state. On a 7-9, the connection is unstable and dangerous, when you take a debility, so do they (and vice versa). On a miss, the branding is rejected and you both erase any Bonds you have to each other. You may write new Bonds with them at the End of Session as usual. This fusion, once performed, cannot be undone by mortal means.</p></div>
+	當你<strong>將一名自願者的靈魂與你融為一體</strong>時，擲+魅力：<br/>
+	✴擲出成功時，你們的靈魂將相連在一起，無論相隔多遠都能夠感應到彼此，並能分享你們各自的情緒狀態。<br/>
+	✴擲出7-9時，這個聯繫不穩定且危險，當你承受到任何異常狀態時，對方也將承受相同的異常狀態（反之亦然）。<br/>
+	✴擲出失敗時，這道烙印在靈魂的連繫將被拒絕，且你們都必須消除所有對彼此的羈絆。你仍然可以在聚會結束時如常寫下對彼此的新羈絆。</p>
+<p class="NoIndent">
+	這個融合狀態一旦被完成，就無法再透過任何凡俗手段被解除。</p></div>
 
-<div class="Move"><h3 class="MoveName">Fanning the Flames</h3>
-<p class="Requirement">需求: Firebrand</p>
+<div class="Move"><h3 class="MoveName">搧風點火 (Fanning the Flames)</h3>
+<p class="Requirement">需求: 煽動者</p>
 <p class="NoIndent">
-	You may apply the effects of your Firebrand move to a group of people – a dozen or so – all at once.</p></div>
+	你可以將你 煽動者 動作的效果同時運用在一群人（十數人左右）身上。</p></div>
 
-<div class="Move"><h3 class="MoveName">Watch the World Burn</h3>
+<div class="Move"><h3 class="MoveName">看這世界陷入火海 (Watch the World Burn)</h3>
 <p class="NoIndent">
-	When you open a channel to the burning planes and call a firestorm, tell the GM what you’re sacrificing and roll+WIS. The sky opens up and fire pours like rain from it within an area about equal to a small village. Everyone and everything in the area takes damage as appropriate. On a 10+ you can extinguish the storm with a little effort. On a 7-9 the fires rage out of your control, spreading and gusting where they are carried by wind and weather. On a miss, something cruel, intelligent and hungry comes with the storm.</p></div></div>
+	當你<strong>開啟通往燃燒位面的通道，並從中喚出席捲一切的烈焰風暴</strong>時，告訴GM你打算犧牲什麼東西，並擲+睿知。在大約一個小村莊的範圍內，天空將被打開，且火焰將如豪雨般傾盆而下。所有範圍內的人事物都將受到相應的傷害。<br/>
+	✴擲出10+時，你不費吹灰之力就能停止並熄滅這陣烈焰風暴。<br/>
+	✴擲出7-9時，大火肆虐，脫離了你的控制，並藉著狂風和天候向四處蔓延擴散。<br/>
+	✴擲出失敗時，某個殘虐、有智慧能力、且飢餓的存在從烈焰風暴中降臨。</p></div></div>
 
           </div>
        </div>
